--- a/client/client.html
+++ b/client/client.html
@@ -7,6 +7,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
 
+    const idMessageMatches = {
+      'badRequest': 'Bad Request',
+      'unauthorized':'Unauthorized',
+      'forbidden':'Forbidden',
+      'internalError':'Internal Server Error',
+      'notImplemented': 'Not Implemented',
+      'notFound': 'Resource Not Found'
+    }
+
     const handleResponse = (xhr) => {
       const type = xhr.getResponseHeader('Content-Type');
       const content = document.querySelector("#content");
@@ -17,13 +26,13 @@
 
       if (type === 'application/json') {
         const obj = JSON.parse(xhr.response);
-        h1.textContent = (obj.id) ? obj.id : 'Success';
+        h1.textContent = (obj.id) ? idMessageMatches[obj.id] : 'Success';
         p.textContent = `Message: ${obj.message}`;
       } else if (type === 'text/xml') {
         const message = xhr.responseXML.querySelector('message').textContent;
         const id = xhr.responseXML.querySelector('id').textContent;
 
-        h1.textContent = (id) ? id : 'Success';
+        h1.textContent = (id) ? idMessageMatches[id] : 'Success';
         p.textContent = `Message: ${message}`;
       }
 
