--- a/client/client.html
+++ b/client/client.html
@@ -19,7 +19,7 @@
     const handleResponse = (xhr) => {
       const type = xhr.getResponseHeader('Content-Type');
       const content = document.querySelector("#content");
-      content.appendChild(document.createElement('hr'));
+      content.innerHTML = "";
 
       const h1 = document.createElement('h1');
       const p = document.createElement('p');
